<resources>
    <string name="app_name">ComplainBox</string>
    <string name="enter_your_email"><font size="2">Email</font></string>
    <string name="enter_your_password"><font size="2">Password</font></string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="occupation">Occupation</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="as_user">As User</string>
    <string name="as_personnel">As Personnel</string>
    <string name="complain_box">Complain Box</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="create">Complain</string>
    <string name="room_no">Room No</string>
    <string name="description">Description</string>
    <string name="code">Device No</string>
    <string name="complain_fragment_title">Make a Complaint</string>
    <string name="profile_fragment_title">Your Profile</string>
    <string name="user_complaints_fragment_title">Your Complaints…</string>
    <string name="all_complaints_fragment_title">all Complaints…</string>
    <string name="solved_complaints_fragment_title">Solved Complaints…</string>
    <string name="unsolved_complaints_fragment_title">Unsolved Complaints…</string>
    <string name="user_name">Name :</string>
    <string name="update">Update</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mirza_adnan_hossain">Mirza Adnan Hossain</string>
    <string name="user">User :</string>

    <string name="search">Search by status..</string>
    <string name="as_admin">As Admin</string>
    <string name="select_department">Select Department</string>
    <string name="department">Department</string>
    <string name="note">Note</string>
    <string name="login">Login</string>
    <string name="please_pick_a_start_date">Please pick a start date</string>
    <string name="please_pick_a_end_date">Please pick a end date</string>
    <string name="status">Status</string>
    <string name="approval">Approval</string>
    <string name="complained_by">Complained by</string>


    // spinner collection

    <string-array name="deptType">
        <item>CSE</item>
        <item>EEE</item>
        <item>BBA</item>
    </string-array>

    <string-array name="departments">
        <item>All</item>
        <item>CSE</item>
        <item>EEE</item>
        <item>BBA</item>
    </string-array>

    <string-array name="complainStatus">
        <item>Pending</item>
        <item>In Process</item>
        <item>Solved</item>
        <item>Unsolved</item>
    </string-array>

    <string-array name="userStatus">
        <item>false</item>
        <item>true</item>
    </string-array>


</resources>
