<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluepink_solid"
    android:gravity="center"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/userTypeRgId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/userRbId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/as_user"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/personnelRbId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="80dp"
            android:text="@string/as_personnel"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/adminRbId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/as_admin"
            android:textSize="14sp" />

    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/DeptEt"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:text="@string/department"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinnerID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp">

        </Spinner>


    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nameEtId"
            style="@style/editTextStyle"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phoneEtId"
            style="@style/editTextStyle"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailEtId"
            style="@style/editTextStyle"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/enter_your_email"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passworLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordEtId"
            style="@style/editTextStyle"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="-48dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBarID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/signInTvId"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#f7f6f6"
        android:textSize="17sp" />

    <Button
        android:id="@+id/registerBtnId"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonstyleithgradient"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textStyle="bold" />

</LinearLayout>