<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@drawable/bluepink"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/complain" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/complain_box"
        android:layout_marginLeft="10dp"
        android:textColor="#0bcce6"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/user"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/nav_header_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:layout_marginLeft="5dp"
            android:text="@string/mirza_adnan_hossain"
            android:textColor="#0bcce6"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/nav_header_user_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:layout_marginLeft="5dp"
            android:text="( Logged As )"
            android:textColor="@color/colorAccent"
            android:textSize="13dp" />


    </LinearLayout>


</LinearLayout>