<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluepink_solid"
    android:orientation="vertical"
    tools:context=".activities.UpdateProfileActivity">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/bluepink_solid"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Name"
                android:textColor="#0bcce6"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/nameUpdateEtID"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/edittextstyle"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:textColorHint="#fff"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Phone"
                android:textColor="#0bcce6"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/phoneUpdateEtID"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/edittextstyle"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingLeft="5dp"
                android:textColorHint="#fff"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Password"
                android:textColor="#0bcce6"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/passwordUpdateEtID"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/edittextstyle"
                android:hint="@string/password"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:textColorHint="#fff"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/updateBtID"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/buttonstyleselector"
        android:text="Update"
        android:textColor="#fff"
        android:textStyle="bold" />


</LinearLayout>